restructure whatsapp api and add openai chat

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-WHATSAPP_APP_ID=""
-WHATSAPP_APP_SECRET=""
-WHATSAPP_ACCESS_TOKEN=""
+# Whatsapp variables
+META_APP_ID=""
+META_APP_SECRET=""
+META_ACCESS_TOKEN=""
 WEBHOOK_VERIFICATION_TOKEN=""
+
+# Chatgpt variables
+OPENAI_API_KEY=""
