--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@hono/node-server": "^1.13.8",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
-    "hono": "^4.7.2"
+    "hono": "^4.7.2",
+    "openai": "^4.86.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
